Added documentation, patched where necessary, added a test.
git-svn-id: file:///home/poletti/.svk/local/perl/Template-Perlish/trunk@1540 c4a4780d-4107-0410-9bb9-83707a6d5e2d

--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
-Revision history for Template-Trivial
+Revision history for Template-Perlish
 
-0.0.1  Thu Apr  3 23:19:11 2008
+1.0  Thu Apr  3 23:19:11 2008
        Initial release.
 
