--- a/README
+++ b/README
@@ -1,18 +1,8 @@
-Template-Trivial version 0.0.1
+Template::Perlish version 1.0
 
-[ REPLACE THIS...
-
-  The README is used to introduce the module and provide instructions on
-  how to install the module, any machine dependencies it may have (for
-  example C compilers and installed libraries) and any other information
-  that should be understood before the module is installed.
-
-  A README file is required for CPAN modules since CPAN extracts the
-  README file from a module distribution so that people browsing the
-  archive can use it get an idea of the modules uses. It is usually a
-  good idea to provide version information here so that people can
-  decide whether fixes for the module are worth downloading.
-]
+Template::Perlish is Yet Another Templating system for Perl. Its goal
+is to be tiny but retain the full power of Perl for most challenging
+situations.
 
 
 INSTALLATION
