Added description for latest changes.
git-svn-id: file:///home/poletti/.svk/local/perl/Template-Perlish/trunk@1557 c4a4780d-4107-0410-9bb9-83707a6d5e2d

--- a/Changes
+++ b/Changes
@@ -9,3 +9,6 @@ Revision history for Template-Perlish
        Added number of tests to be executed for better test reliability
        Added compile_as_sub method and tests
        Expanded documentation
+       Got rid of accessors in favour of direct hash access. This keeps
+         the code at a very minimum.
+       Added tptree script and companions.
