Added dependency on perl version.
git-svn-id: file:///home/poletti/.svk/local/perl/Template-Perlish/trunk@1559 c4a4780d-4107-0410-9bb9-83707a6d5e2d

--- a/Changes
+++ b/Changes
@@ -12,3 +12,7 @@ Revision history for Template-Perlish
        Got rid of accessors in favour of direct hash access. This keeps
          the code at a very minimum.
        Added tptree script and companions.
+
+1.02 
+       Simplified print statement in certain conditions
+       Added prerequisite on perl version in Build.PL
