Finalised Changes for 1.02.
git-svn-id: file:///home/poletti/.svk/local/perl/Template-Perlish/trunk@1565 c4a4780d-4107-0410-9bb9-83707a6d5e2d

--- a/Changes
+++ b/Changes
@@ -14,5 +14,8 @@ Revision history for Template-Perlish
        Added tptree script and companions.
 
 1.02 
-       Simplified print statement in certain conditions
-       Added prerequisite on perl version in Build.PL
+       Simplified print statement in certain conditions.
+       Added prerequisite on perl version in Build.PL.
+       Added an --edefine|--eval-define|-E option to tptree.
+       Fixed some parts in the documentation.
+       Added a "SHOULD YOU USE THIS" section.
