--- a/Changes
+++ b/Changes
@@ -13,9 +13,13 @@ Revision history for Template-Perlish
          the code at a very minimum.
        Added tptree script and companions.
 
-1.02 
+1.02 Fri Apr 11 23:00:00 2008
        Simplified print statement in certain conditions.
        Added prerequisite on perl version in Build.PL.
        Added an --edefine|--eval-define|-E option to tptree.
        Fixed some parts in the documentation.
        Added a "SHOULD YOU USE THIS" section.
+
+1.03
+       Fixed internal POD links in documentation.
+       Fixed some stuff in the docs.
