--- a/Changes
+++ b/Changes
@@ -20,6 +20,7 @@ Revision history for Template-Perlish
        Fixed some parts in the documentation.
        Added a "SHOULD YOU USE THIS" section.
 
-1.03
+1.03 Wed Jul 30 13:03:09 2008
        Fixed internal POD links in documentation.
        Fixed some stuff in the docs.
+       Added "evaluate and print" of Perl expressions via [%= ... %]
