--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Template-Perlish
 
+1.20 Fri Feb 13 23:33:47 2015
+       Enhanced error reporting.
+       Refactoring.
+
+1.06 Sun Jul 21 16:51:00 2013
+       Added "SEE ALSO" section.
+       Added handling of utf-8 flag.
+       Fixed issue with POD encoding.
+       Removed POD tests for non-authors.
+
 1.05 Tue Sep 02 12:32:00 2008
        Added a convenience function 'render' for one-shot template
        renderings.
