--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@
 
 Revision history for Template-Perlish
    - Minor fixes
-   - Release
+   - Using Milla for hanlding the distribution
 
 1.30_03 Fri Oct 02 07:46:09 2015
    - Removed a defined-or, for perl 5.8.x
