--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Changes for Template::Perlish:
 
+{{$NEXT}}
+
 1.30_04   2015-10-03 03:57:09EDT-0400 America/New_York (TRIAL RELEASE)
    - Minor fixes
    - Using Milla for hanlding the distribution
