fixed typo in docs, removal of trailing spaces

--- a/lib/Template/Perlish.pod
+++ b/lib/Template/Perlish.pod
@@ -100,7 +100,7 @@ can easily embed in your script;
 
 =item *
 
-simple approach to variable substitution, following 
+simple approach to variable substitution, following
 L<Template::Toolkit|Template::Toolkit>
 to cope with scalars, hashes and arrays;
 
@@ -140,9 +140,9 @@ yourself, and even in that case be suspicious.
 
 If you think that this module does not fit your requirements,
 my personal suggestion for a templating system is
-L<Template::Toolkit|Template::Toolkit>: 
-it's complete, easy to use and extensible, has excellent documentation 
-(including a book and a quick reference guide) and support. Do you need 
+L<Template::Toolkit|Template::Toolkit>:
+it's complete, easy to use and extensible, has excellent documentation
+(including a book and a quick reference guide) and support. Do you need
 anything more?
 
 But don't trust me! Take a look at I<Choosing a Templating System> at
@@ -350,7 +350,7 @@ template transformed into Perl code.
 
 Much like L</compile>, this method does exactly the same compilation,
 but returns a reference to an anonymous subroutine that can be used
-each time you want to "explode" the template. 
+each time you want to "explode" the template.
 
 The anonymous sub that is returned accepts a single, optional parameter,
 namely a reference to a hash of variables to be used in addition to the
@@ -391,10 +391,10 @@ defaults). If you have to print stuff, just print to STDOUT, it will
 be automatically catpured (unless you're calling the generated
 code by yourself).
 
-Anything inside these "special" parts matching the regular 
+Anything inside these "special" parts matching the regular
 expression /^\s*\w+(?:\.\w+)*\s*$/, i.e. consisting only of a sequence
 of alphanumeric tokens separated by dots, are considered to be variables
-and processed accordingly. Thus, available variables can be accessed 
+and processed accordingly. Thus, available variables can be accessed
 in two ways: using the dotted notation, as in
 
    [% some.value.3.lastkey %]
@@ -460,7 +460,7 @@ shortcut to evaluate it and print all in one single command:
 
   [%= my $value = 100; "*** $variable -> $value ***" %]
 
-Note that there is an equal sign (C<">) immediately after the command
+Note that there is an equal sign (C<=>) immediately after the command
 opener C<[%>. The Perl expression is evaluated in scalar context, and
 the result is printed (if defined, otherwise it's skipped). This sort
 of makes the previous short form for simple scalars a bit outdated,
@@ -673,3 +673,4 @@ for a comparison (and a fairly complete list) of different templating
 modules.
 
 =cut
+
