--- a/lib/Template/Perlish.pod
+++ b/lib/Template/Perlish.pod
@@ -39,7 +39,7 @@ This document describes Template::Perlish version 1.41.
 
    my $processed = $tt->process($template, {
       name => 'Ciccio Riccio',
-      items => [ qw( ciao a tutti quanti ) ],
+      items => [ qw< ciao a tutti quanti > ],
       uris => [
          'http://whatever/',
          undef,
@@ -69,7 +69,7 @@ The above prints:
 
 There is also a convenience function for one-shot templates:
 
-   use Template::Perlish qw( render );
+   use Template::Perlish qw< render >;
    my $rendered = render($template, \%variables);
 
 
@@ -79,11 +79,10 @@ You're probably looking at the tons and tons of templating systems
 available around - should you use this?
 
 This system is quite basic and useful for simple situations. Say you
-have a bunch of templates in which you want to put some variables -
-then it's ok. On top of this, say that you want to add some simple
-logic - like a couple of IF's or iterating over an array - then
-it's ok again. For everything more complicated you should probably
-look elsewhere.
+have a bunch of templates in which you want to put some variables - then
+it's ok. On top of this, say that you want to add some simple logic -
+like a couple of IF's or iterating over an array - then it's ok again.
+For everything more complicated you should probably look elsewhere.
 
 As a summary:
 
@@ -95,14 +94,14 @@ As a summary:
 
 =item *
 
-lightweight, a single-file module with minimal requirements that you
-can easily embed in your script;
+lightweight, a single-file module with minimal requirements that you can
+easily embed in your script;
 
 =item *
 
 simple approach to variable substitution, following
-L<Template::Toolkit|Template::Toolkit>
-to cope with scalars, hashes and arrays;
+L<Template::Toolkit|Template::Toolkit> to cope with scalars, hashes and
+arrays;
 
 =back
 
@@ -112,9 +111,9 @@ to cope with scalars, hashes and arrays;
 
 =item *
 
-Perl code to handle all logic. This can be regarded as a PRO if you're
-a Perl programmer, because you already know the syntax; this is
-probably (definitively?) a CON in all other cases;
+Perl code to handle all logic. This can be regarded as a PRO if you're a
+Perl programmer, because you already know the syntax; this is probably
+(definitively?) a CON in all other cases;
 
 =back
 
@@ -138,12 +137,11 @@ yourself, and even in that case be suspicious.
 
 =back
 
-If you think that this module does not fit your requirements,
-my personal suggestion for a templating system is
-L<Template::Toolkit|Template::Toolkit>:
-it's complete, easy to use and extensible, has excellent documentation
-(including a book and a quick reference guide) and support. Do you need
-anything more?
+If you think that this module does not fit your requirements, my
+personal suggestion for a templating system is
+L<Template::Toolkit|Template::Toolkit>: it's complete, easy to use and
+extensible, has excellent documentation (including a book and a quick
+reference guide) and support. Do you need anything more?
 
 But don't trust me! Take a look at I<Choosing a Templating System> at
 L<http://perl.apache.org/docs/tutorials/tmpl/comparison/comparison.html>,
@@ -152,8 +150,8 @@ templating systems in Perl, and decide by yourself!
 
 =head1 DESCRIPTION
 
-You bet, this is another templating system for Perl. Yes, because
-it's the dream of every Perl programmer, me included. I needed something
+You bet, this is another templating system for Perl. Yes, because it's
+the dream of every Perl programmer, me included. I needed something
 that's easily portable, with no dependencies apart a recent Perl version
 (but with some tweaking this should be solved), much in the spirit of
 the ::Tiny modules.
@@ -177,12 +175,13 @@ I<Commands> can be of four different types:
 
 =item B<variable embedding>
 
-that are expanded with the particular value for a given C<variable>, where
-C<variable>s are passed as a hash reference. A variable can be defined
-as a sequence of alphanumeric (actually C<\w>) tokens, separated by dots.
-The variables hash is visited considering each token as a subkey, in order
-to let you visit complex data structures. You can also put arrays in, but
-remember to use numbers ;)
+that are expanded with the particular value for a given C<variable>,
+where C<variable>s are passed as a hash reference. A variable can be
+defined as a sequence of alphanumeric (actually C<\w>) tokens, separated
+by dots (or anything described in L</Templates> as of version 1.40). The
+variables hash is visited considering each token as a subkey, in order
+to let you visit complex data structures. You can also put arrays in,
+just use the index as a key in this case.
 
 =item B<scalar Perl variable>
 
@@ -191,8 +190,8 @@ that is expanded with the value of the given scalar variable;
 =item B<Perl expression>
 
 this MUST have a C<=> equal sign immediately after the opener, and
-contain a valid Perl expression. This expression is evaluated
-in scalar context and the result is printed;
+contain a valid Perl expression. This expression is evaluated in scalar
+context and the result is printed;
 
 =item B<code>
 
@@ -224,9 +223,9 @@ probably head somewhere else. Or not.
    # print out the template filled with some variables
    print $tp->process($tmpl, { key => 'value' });
 
-Each template is transformed into Pure Perl code, then the code
-is evaluated in order to get the output. Thus, if you want to operate
-on the same template many times, a typical usage is:
+Each template is transformed into Pure Perl code, then the code is
+evaluated in order to get the output. Thus, if you want to operate on
+the same template many times, a typical usage is:
 
    # compile the template with something like:
    my $compiled = $tp->compile($template);
@@ -236,8 +235,8 @@ on the same template many times, a typical usage is:
       print "DATASET\n", $tp->evaluate($compiled, $dataset), "\n\n";
    }
 
-There is also a facility - namely C</compile_as_sub> - that returns an
-anonymous sub that encapsulates the C<evaluate> call above:
+There is also a facility - namely L</compile_as_sub> - that returns an
+anonymous sub that encapsulates the L</evaluate> call above:
 
    my $sub = $tp->compile_as_sub($template)
       or die "template did not compile: $EVAL_ERROR";
@@ -252,9 +251,9 @@ arises, the module will C<die()> with a meaningful message about where
 the error is. This happens with all the provided facilities.
 
 Error checking is turned on automatically on all facilities. You can
-avoid doing it in the C</compile> method, although the check will kick
-in at the first usage of the compiled form. To avoid the check upon
-the compilation, pass the C<no_check> option to L</compile>:
+avoid doing it in the L</compile> method, although the check will kick
+in at the first usage of the compiled form. To avoid the check upon the
+compilation, pass the C<no_check> option to L</compile>:
 
    my $compiled = $tp->compile($template, no_check => 1);
 
@@ -269,17 +268,17 @@ template:
 
 =item B<render>
 
-   use Template::Perlish qw( render );
+   use Template::Perlish qw< render >;
    my $rendered = render($template);             # OR
    my $rendered = render($template, %variables); # OR
    my $rendered = render($template, \%variables);
 
-if you already have a template and the variables to fill it in, this
-is probably the quickest thing to do.
+if you already have a template and the variables to fill it in, this is
+probably the quickest thing to do.
 
-You can pass the template alone, or you can pass the variables as
-well, either as a flat list (that will be converted back to a hash)
-or as a single hash reference.
+You can pass the template alone, or you can pass the variables as well,
+either as a flat list (that will be converted back to a hash) or as a
+single hash reference.
 
 Returns the rendered template, i.e. the same output as L</process>.
 
@@ -316,8 +315,8 @@ L</evaluate>.
 
 Parameters can be given directly or via a hash reference.
 
-By default, the delimiters are the same as TT2, i.e. C<[%> and C<%]>, and
-the variables hash is empty.
+By default, the delimiters are the same as TT2, i.e. C<[%> and C<%]>,
+and the variables hash is empty.
 
 The return value is a reference to an anonymous hash, whose three
 elements are the ones described above. You can modify them at will.
@@ -337,9 +336,9 @@ compile a template generating the relevant Perl code. Using this method
 is useful when the same template has to be used multiple times, so the
 compilation can be done one time only.
 
-You can turn off checking using the c<no_check> optional parameter and
-passing a true value. The check will be performed upon the first
-usage of the compiled form though.
+You can turn off checking using the C<no_check> optional parameter and
+passing a true value. The check will be performed upon the first usage
+of the compiled form though.
 
 Returns a hash containing, among the rest, a text version of the
 template transformed into Perl code.
@@ -349,8 +348,8 @@ template transformed into Perl code.
    $sub_reference = $tp->compile_as_sub($template);
 
 Much like L</compile>, this method does exactly the same compilation,
-but returns a reference to an anonymous subroutine that can be used
-each time you want to "explode" the template.
+but returns a reference to an anonymous subroutine that can be used each
+time you want to "explode" the template.
 
 The anonymous sub that is returned accepts a single, optional parameter,
 namely a reference to a hash of variables to be used in addition to the
@@ -369,8 +368,8 @@ L</evaluate> method.
 
 evaluate a template (in its compiled form, see L</compile>) with the
 available variables. In the former form, only the already configured
-variables are used; in the latter, the given C<$variables> (which is
-a hash reference) are added, overriding any corresponding key.
+variables are used; in the latter, the given C<$variables> (which is a
+hash reference) are added, overriding any corresponding key.
 
 Returns the processed text as a string.
 
@@ -385,17 +384,17 @@ this method included L</compile> and L</evaluate> into a single step.
 
 =head2 Templates
 
-There's really very little to say: write your document/text/whatever, and
-embed special parts with the delimiters of your choice (or stick to the
-defaults). If you have to print stuff, just print to STDOUT, it will
-be automatically catpured (unless you're calling the generated
-code by yourself).
+There's really very little to say: write your document/text/whatever,
+and embed special parts with the delimiters of your choice (or stick to
+the defaults). If you have to print stuff, just print to C<STDOUT>, it
+will be automatically catpured (unless you're calling the generated code
+by yourself).
 
-Anything inside these "special" parts matching the regular
-expression /^\s*\w+(?:\.\w+)*\s*$/, i.e. consisting only of a sequence
-of alphanumeric tokens separated by dots, are considered to be variables
-and processed accordingly. Thus, available variables can be accessed
-in two ways: using the dotted notation, as in
+Anything inside these "special" parts matching the regular expression
+C<< /^\s*\w+(?:\.\w+)*\s*$/ >>, i.e. consisting only of a sequence of
+alphanumeric tokens separated by dots, are considered to be variables
+and processed accordingly. Thus, available variables can be accessed in
+two ways: using the dotted notation, as in
 
    [% some.value.3.lastkey %]
 
@@ -462,13 +461,13 @@ shortcut to evaluate it and print all in one single command:
 
 Note that there is an equal sign (C<=>) immediately after the command
 opener C<[%>. The Perl expression is evaluated in scalar context, and
-the result is printed (if defined, otherwise it's skipped). This sort
-of makes the previous short form for simple scalars a bit outdated,
-but you spare a character in any case and it's just DWIM.
+the result is printed (if defined, otherwise it's skipped). This sort of
+makes the previous short form for simple scalars a bit outdated, but you
+spare a character in any case and it's just DWIM.
 
-If you know Perl, you should not have problems using the control structures.
-Just intersperse the code with the templates as you would normally do
-in any other templating system:
+If you know Perl, you should not have problems using the control
+structures.  Just intersperse the code with the templates as you would
+normally do in any other templating system:
 
    [%
       if ($variables{this}) {
@@ -483,8 +482,8 @@ in any other templating system:
       }
    %]
 
-Take care to always terminate your commands with a C<;> each time
-you would do it in actual code.
+Take care to always terminate your commands with a C<;> each time you
+would do it in actual code.
 
 As of version 1.40, there are also a few functions that will make your
 life easy if you want to access the variables, namely L</V> to access a
@@ -492,10 +491,10 @@ variable provided its dotted-path representation, L</A> for expanding
 the variable as an array, L</H> to expand it as a hash, and L</HK> and
 L</HV> to get the keys and values of a hash, respectively.
 
-There's no escaping mechanism, so if you want to include literal
-C<[%> or C<%]> you either have to change delimiters, or you have to
-resort to tricks. In particular, a stray closing inside a textual part
-won't be a problem, e.g.:
+There's no escaping mechanism, so if you want to include literal C<[%>
+or C<%]> you either have to change delimiters, or you have to resort to
+tricks. In particular, a stray closing inside a textual part won't be a
+problem, e.g.:
 
    [% print "variable"; %] %] [% print "another"; %]
 
@@ -503,8 +502,8 @@ prints:
 
    variable %] another
 
-The tricky part is including the closing in the Perl code, but there
-can be many tricks:
+The tricky part is including the closing in the Perl code, but there can
+be many tricks:
 
    [% print '>>>%'.']<<<' %]
 
@@ -605,9 +604,8 @@ find it anyway.
 
 =item C<< open(): %s >>
 
-the only C<perlfunc/open> is done to print stuff to a string.
-If you get this error, you're probably using a version of Perl that's
-too old.
+the only C<perlfunc/open> is done to print stuff to a string. If you get
+this error, you're probably using a version of Perl that's too old.
 
 =item C<< unclosed %s at position %d >>
 
@@ -615,13 +613,14 @@ a Perl block was opened but not closed.
 
 =back
 
-Other errors are generated as part of the Perl compilation, so they
-will reflect the particular compile-time error encountered at that time.
+Other errors are generated as part of the Perl compilation, so they will
+reflect the particular compile-time error encountered at that time.
 
 
 =head1 CONFIGURATION AND ENVIRONMENT
 
-Template::Perlish requires no configuration files or environment variables.
+Template::Perlish requires no configuration files or environment
+variables.
 
 
 =head1 DEPENDENCIES
@@ -641,10 +640,10 @@ No bugs have been reported.
 Please report any bugs or feature requests through http://rt.cpan.org/
 
 Due to the fact that Perl code is embedded directly into the template,
-you have to take into consideration all the possible security implications.
-In particular, you should avoid taking templates from outside, because
-in this case you'll be evaluating Perl code that you haven't checked.
-CAVEAT EMPTOR.
+you have to take into consideration all the possible security
+implications.  In particular, you should avoid taking templates from
+outside, because in this case you'll be evaluating Perl code that you
+haven't checked.  CAVEAT EMPTOR.
 
 =head1 AUTHOR
 
@@ -655,11 +654,11 @@ Flavio Poletti <polettix@cpan.org>
 
 Copyright (c) 2008-2015 by Flavio Poletti C<polettix@cpan.org>.
 
-This module is free software.  You can redistribute it and/or
-modify it under the terms of the Artistic License 2.0.
+This module is free software.  You can redistribute it and/or modify it
+under the terms of the Artistic License 2.0.
 
-This program is distributed in the hope that it will be useful,
-but without any warranty; without even the implied warranty of
+This program is distributed in the hope that it will be useful, but
+without any warranty; without even the implied warranty of
 merchantability or fitness for a particular purpose.
 
 =head1 SEE ALSO
